<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="src.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INICIAR SESIÓN"
                android:textColor="#232323"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_email"
                android:inputType="textWebEmailAddress"
                android:paddingTop="20dp"
                android:textColor="#D81B60"
                android:textColorHint="#D81B60" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingTop="20dp"
                android:textColor="#D81B60"
                android:textColorHint="#D81B60" />

            <TextView
                android:id="@+id/link_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecoveryPassword"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="¿Olvidaste tu contraseña?"
                android:textColor="#8C8C8C"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button_unblock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D81B60"
                android:onClick="onLogin"
                android:text="Iniciar sesión"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/link_view_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onRegister"
                android:paddingTop="10dp"
                android:text="REGISTRARME"
                android:textColor="#D81B60"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>